Update 0.5.1 (#61)
* refactor(liquibase) change name eftidatauuid to datasetid

* refactor(liquibase) : rename datasetId -> requestId + delete com's

* resolved some sonar issues, fixed sonar exclusions and used dependency...

* refactor(xml-checker) : add xml checker to the project

* refactor(translate-TU) : translate TU to english

* refactor(log-note) : add log for note

* feat(efti-1060) add new test cases for identifiers

* feat(efti-1064) add index to identifiers equipement ids

* chore() 0.5.1-SNAPSHOT

* chore() somes fixes post rebase

* refactor(mock-platform) : add gate mock inside simulator

---------

Co-authored-by: Julien Thueux <julien.thueux@ingroupe.com>
Co-authored-by: SOULEY Ousmane <ousmane.souley@ext.ingroupe.com>
Co-authored-by: dfourmaux <damien.fourmaux@gmail.com>